컨트롤러랑 오더 뷰 오더디비수정중

--- a/app/views/posts/order.html.erb
+++ b/app/views/posts/order.html.erb
@@ -187,7 +187,8 @@
   <div class="card-body" >
     <tr>
       <td>총 결제금액</td>
-      <td><%= @post.price %></td>
+      <!-- <td><%#= @post.price %></td> -->
+      <td><%= @orderform.total_pay %></td>
     </tr>
   </div>
 </div>
