옵션정보 order로 불러오기

--- a/app/views/posts/order.html.erb
+++ b/app/views/posts/order.html.erb
@@ -199,8 +199,8 @@
     결제정보
   </div>
   <div class="card-body" >
-
-
+    <p><%= params[:options] %></p>
+    <p><%= params[:quantity] %></p>
   </div>
 </div>
 </br>
