옵션여러개 order로 넘기기

--- a/app/views/posts/order.html.erb
+++ b/app/views/posts/order.html.erb
@@ -199,8 +199,8 @@
     결제정보
   </div>
   <div class="card-body" >
-    <p><%= params[:options] %></p>
-    <p><%= params[:quantity] %></p>
+    <p><%= params[:option_0] %>, <%= params[:quantity_0] %></p>
+    <p><%= params[:option_1] %>, <%= params[:quantity_1] %></p>
   </div>
 </div>
 </br>
