--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -91,26 +91,37 @@
   <%= link_to post do %>
     <%= image_tag post.img.thumb_fill.url, class: "card-img-top"  %>
   <% end %>
+  <div class="card-body text-center">
+    <!-- <h5 class="card-title"><%= post.title %></h5> -->
+    <%= link_to "<h5>#{post.title}</h5>".html_safe, post, class: "card-title" %>
+    <p class="card-text"><%= post.user.email %> </p>
+    <!-- <p class="card-text"><%# post.description %></p> -->
+    <p><i class="fas fa-tags"></i> <%= tag_icons post.tag_list%></p>
+  </div>
   <div class="progress" style="height: 5px;">
     <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
-  <div class="card-body text-center">
-    <% if current_user and current_user.liked_posts.include? post %>
-        <%= link_to "posts/#{post.id}/like", data: {id: post.id}, remote: true, method: :delete do %>
-          <i class="fas fa-heart"></i>
-        <% end %>
-    <% else %>
-        <%= link_to "posts/#{post.id}/like", data: {id: post.id}, remote: true, method: :put do %>
-          <i class="far fa-heart"></i>
-        <% end %>
-    <% end %>
-    <span><%= post.liked_users.count %></span>
-    <!-- <h5 class="card-title"><%= post.title %></h5> -->
-    <%= link_to "<h5>#{post.title}</h5>".html_safe, post, class: "card-title" %>
-    <p class="card-text"> <%= post.user.email %> </p>
-    <p class="card-text"><%= post.description %></p>
-    <%= tag_icons post.tag_list%>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-sm"><p class="card-text"><i class="far fa-calendar-alt"></i> D-<%=(post.end_date - Date.current).to_i %></p></div>
+      <div class="col-sm">
+        <p><% if current_user and current_user.liked_posts.include? post %>
+          <%= link_to "posts/#{post.id}/like", data: {id: post.id}, remote: true, method: :delete do %>
+            <i class="fas fa-heart"></i>
+          <% end %>
+      <% else %>
+          <%= link_to "posts/#{post.id}/like", data: {id: post.id}, remote: true, method: :put do %>
+            <i class="far fa-heart"></i>
+          <% end %>
+      <% end %>
+      <span><%= post.liked_users.count %></span> </p>
+    </div>
+      <div class="col-sm"> <p>25%</p> </div>
+    </div>
+
+
   </div>
+
 </div>
 
 
