수정디비 파라미터 넘기는 중 아직미완성

--- a/app/views/posts/order.html.erb
+++ b/app/views/posts/order.html.erb
@@ -187,7 +187,13 @@
   <div class="card-body" >
     <tr>
       <td>총 결제금액</td>
-       <td><%= @post.price %></td>
+      <!-- <td><%#= @post.option_price %></td>
+      <td><%#= @result %></td> -->
+
+      <% @result.each do |key,value| %>
+         <td><%= key %> : <%= @post.option_price[key].to_i * value.to_i %></td>
+      <% end %>
+
       <!-- <td><%#= @orderform.total_pay %></td> -->
     </tr>
   </div>
