--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,10 +18,10 @@
   </div>
   <%= f.input :account , placeholder:"계좌번호를 -없이 입력해주세요" %>
   <%= f.input :account_name , placeholder:"은행명을 입력해주세요" %>
-  <%= f.input :price , placeholder:"가격을 입력해주세요" %>
-  <%= f.input :option, placeholder: '옵션은 /로 구분해주세요'%>
+  <%= f.input :option, placeholder: '옵션은 /로 구분해주세요 (ex.티셔츠(빨강)/티셔츠(블랙)/응원봉)'%>
+  <%= f.input :price , placeholder:"옵션별 가격을 순서대로 입력해주세요 (ex.10000/10000/5000)" %>
   <%= f.input :content, class: "editor", rows:40, cols: 120 %>
-  <%= f.input :tag_list_fixed, placeholder: '태그는 ,로 구분해주세요'%>
+  <%= f.input :tag_list_fixed, placeholder: '태그는 ,로 구분해주세요 (ex.방탄소년단,티셔츠,공구)'%>
 
   <%#= simple_fields_for :tags do |t| %>
   <%#= simple_fields_for :tags do |t| %>
