--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,12 +48,12 @@
   </header>
 
 <!-- nav bar -->
-<nav class="navbar navbar-expand-lg navbar-light row">
+<nav class="navbar navbar-expand-lg navbar-light row ">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
   </button>
    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-     <div class="navbar-nav">
+     <div class="navbar-nav navbar-center">
        <%= link_to '홈으로', root_path	, class: "nav-item nav-link" %>
        <%= link_to '플래닛개설하기', new_post_path, class: "nav-item nav-link" %>
        <%= link_to '공구둘러보기', '/posts/group', class: "nav-item nav-link" %>
