--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -103,9 +103,9 @@
   </div>
   <div class="card-body">
     <div class="row">
-      <div class="col-sm"><p class="card-text"><i class="far fa-calendar-alt"></i> D-<%=(post.end_date - Date.current).to_i %></p></div>
+      <div class="col-sm"><p class="card-text text-center"><i class="far fa-calendar-alt"></i> D-<%=(post.end_date - Date.current).to_i %></p></div>
       <div class="col-sm">
-        <p><% if current_user and current_user.liked_posts.include? post %>
+        <p class="card-text text-center"><% if current_user and current_user.liked_posts.include? post %>
           <%= link_to "posts/#{post.id}/like", data: {id: post.id}, remote: true, method: :delete do %>
             <i class="fas fa-heart"></i>
           <% end %>
@@ -116,17 +116,13 @@
       <% end %>
       <span><%= post.liked_users.count %></span> </p>
     </div>
-      <div class="col-sm"> <p>25%</p> </div>
+      <div class="col-sm"> <p class="card-text text-right">25%</p> </div>
     </div>
-
-
   </div>
-
 </div>
-
-
 <% end %>
 </div>
+
 <div class="d-flex justify-content-center">
   <%= paginate @posts %>
 </div>
